--- a/06. object.md
+++ b/06. object.md
@@ -156,7 +156,8 @@
     -
     ``` 
     function 객체명(파라미터) {
-        파라미터들로 속성들 초기화
+        this 객체를 통한 파라미터들로 속성들 초기화,
+        this 객체를 통한 기능의 정의
     }
 
     const 객체변수명 = new 객체명(초기화값);
